// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollableContainer /> by default matches with snapshot 1`] = `
<div
  className="k-Container k-Container--no-padding"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="k-ScrollableContainer"
    style={
      Object {
        "MsOverflowStyle": "none",
        "WebkitOverflowScrolling": "touch",
        "display": "flex",
        "overflowX": "auto",
        "whiteSpace": "nowrap",
      }
    }
  />
  <div
    style={
      Object {
        "background": "linear-gradient(90deg, #fff, rgba(255, 255, 255, 0))",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "background": "linear-gradient(90deg, rgba(255, 255, 255, 0), #fff)",
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 20,
      }
    }
  />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".k-ScrollableContainer::-webkit-scrollbar{display: none;}",
      }
    }
  />
</div>
`;

exports[`<ScrollableContainer /> with children matches with snapshot 1`] = `
<div
  className="k-Container k-Container--no-padding"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="k-ScrollableContainer"
    style={
      Object {
        "MsOverflowStyle": "none",
        "WebkitOverflowScrolling": "touch",
        "display": "flex",
        "overflowX": "auto",
        "whiteSpace": "nowrap",
      }
    }
  >
    <nav>
      <ul>
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </nav>
  </div>
  <div
    style={
      Object {
        "background": "linear-gradient(90deg, #fff, rgba(255, 255, 255, 0))",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "background": "linear-gradient(90deg, rgba(255, 255, 255, 0), #fff)",
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 20,
      }
    }
  />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".k-ScrollableContainer::-webkit-scrollbar{display: none;}",
      }
    }
  />
</div>
`;

exports[`<ScrollableContainer /> with some props matches with snapshot 1`] = `
<div
  aria-hidden={true}
  className="k-Container k-Container--no-padding custom__class"
  style={
    Object {
      "color": "red",
      "position": "relative",
    }
  }
>
  <div
    className="k-ScrollableContainer"
    style={
      Object {
        "MsOverflowStyle": "none",
        "WebkitOverflowScrolling": "touch",
        "display": "flex",
        "overflowX": "auto",
        "whiteSpace": "nowrap",
      }
    }
  />
  <div
    style={
      Object {
        "background": "linear-gradient(90deg, #fff, rgba(255, 255, 255, 0))",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 20,
      }
    }
  />
  <div
    style={
      Object {
        "background": "linear-gradient(90deg, rgba(255, 255, 255, 0), #fff)",
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": 20,
      }
    }
  />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".k-ScrollableContainer::-webkit-scrollbar{display: none;}",
      }
    }
  />
</div>
`;
